--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "inquirer": "^9.2.7",
+    "npmlog": "^7.0.1",
     "url-join": "^5.0.0"
   },
   "publishConfig": {
