--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -2,7 +2,7 @@
   "name": "@ftd-zf/cli",
   "version": "0.0.3",
   "description": "template cli",
-  "author": "zhaof <1421819591@qq.com>",
+  "author": "FTD-ZF",
   "homepage": "",
   "license": "ISC",
   "main": "lib/index.js",
@@ -21,6 +21,7 @@
     "test": "node ./__tests__/cli.test.js"
   },
   "dependencies": {
+    "@ftd-zf/generate": "^0.0.3",
     "@ftd-zf/init": "^0.0.3",
     "@ftd-zf/utils": "^0.0.3",
     "chalk": "^5.2.0",
