--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@ftd-zf/data",
   "version": "0.0.3",
-  "description": "> TODO: description",
-  "author": "zhaof <1421819591@qq.com>",
+  "description": "模版数据维护",
+  "author": "FTD-ZF",
   "homepage": "",
   "license": "ISC",
   "main": "lib/index.js",
