--- a/packages/init/package.json
+++ b/packages/init/package.json
@@ -2,7 +2,7 @@
   "name": "@ftd-zf/init",
   "version": "0.0.3",
   "description": "init command",
-  "author": "zhaof <1421819591@qq.com>",
+  "author": "FTD-ZF",
   "homepage": "",
   "license": "ISC",
   "main": "lib/index.js",
