--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -24,6 +24,8 @@
     "@ftd-zf/generate": "^0.0.6",
     "@ftd-zf/init": "^0.0.6",
     "@ftd-zf/oss": "^0.0.6",
+    "@ftd-zf/tarocomponent": "^0.0.6",
+    "@ftd-zf/taropage": "^0.0.6",
     "@ftd-zf/utils": "^0.0.6",
     "chalk": "^5.2.0",
     "commander": "^10.0.1",
