--- a/packages/oss/package.json
+++ b/packages/oss/package.json
@@ -33,5 +33,6 @@
     "ali-oss": "^6.17.1",
     "chalk": "^5.2.0",
     "fs-extra": "^11.1.1"
-  }
+  },
+  "gitHead": "fcf908b58119dd52852492d06c9527ce81c77bba"
 }
