--- a/packages/command/package.json
+++ b/packages/command/package.json
@@ -19,5 +19,6 @@
   "type": "module",
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "gitHead": "fcf908b58119dd52852492d06c9527ce81c77bba"
 }
