--- a/packages/init/package.json
+++ b/packages/init/package.json
@@ -28,5 +28,6 @@
   "type": "module",
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "gitHead": "fcf908b58119dd52852492d06c9527ce81c77bba"
 }
