--- a/packages/taroComponent/package.json
+++ b/packages/taroComponent/package.json
@@ -31,5 +31,6 @@
   "type": "module",
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "gitHead": "fcf908b58119dd52852492d06c9527ce81c77bba"
 }
