--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -27,6 +27,7 @@
     "@ftd-zf/oss": "^0.0.25",
     "@ftd-zf/tarocomponent": "^0.0.25",
     "@ftd-zf/taropage": "^0.0.25",
+    "@ftd-zf/taropageall": "^0.0.25",
     "@ftd-zf/utils": "^0.0.25",
     "chalk": "^5.2.0",
     "commander": "^10.0.1",
